[gd_scene load_steps=3 format=3 uid="uid://7vrxrkbkr8v1"]

[ext_resource type="StyleBox" uid="uid://yxqr2ewvhjsy" path="res://Themes/EnemyCreatorSubSectionBorder.tres" id="1_vulre"]
[ext_resource type="Script" path="res://Custom/EnemyCreatorStrikeContainer.gd" id="2_fd7lp"]

[node name="EnemyCreatorStrikeContainer" type="PanelContainer"]
offset_right = 800.0
offset_bottom = 200.0
theme_override_styles/panel = ExtResource("1_vulre")
script = ExtResource("2_fd7lp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StrikeText" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Melee[/b] [img=17]res://Icons/Action.png[/img] Sword +21 [b]Damage[/b] 1d8+16 slashing plus 2d6 electric"
fit_content = true

[node name="EditButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = " ☰ "

[node name="CloseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "✕"

[connection signal="pressed" from="HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="close"]
